--- a/dashboard.html
+++ b/dashboard.html
@@ -7,10 +7,10 @@
 
 </head>
 <body>
-<button class="button button-block"/>View Accounts</button>
-<button class="button button-block"/>Deposit</button>
-<button class="button button-block"/>Withdraw</button>
-<button class="button button-block"/>Transfer</button>
-<button class="button button-block"/>Logout</button>
+<button id=" viewAccounts" class="button button-block"/>View Accounts</button>
+<button id="Deposit" class="button button-block"/>Deposit</button>
+<button id=" Withdraw" class="button button-block"/>Withdraw</button>
+<button id="Transfer" class="button button-block"/>Transfer</button>
+<button id="Logout" class="button button-block"/>Logout</button>
 </body>
 </html>
