--- a/wrong.html
+++ b/wrong.html
@@ -5,6 +5,9 @@
 <h1> 
   Bank App Trust Corp. Your most secured bank app
 </h1> 
+<h1>
+    Sorry, wrong credentials, please try again!
+</h1>
 <div>
 <h2> If you have an account, please login here: </h1>
 <form action="/login" method="POST">
@@ -12,7 +15,7 @@
     <input type="text" id="username" name="username">
 
     <label for="pass">Password (8 characters minimum):</label>
-    <input type="password" id="password" name="password"
+    <input type="password" id="pass" name="password"
            minlength="8" required>
 
 	<input type="submit" value="Sign in">
@@ -25,18 +28,10 @@
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
 
-    <label for="fname">First Name:</label>
-    <input type="text" id="fname" name="fname">
-
-    <label for="lname">Last Name:</label>
-    <input type="text" id="lname" name="lname">
-    <br>
     <label for="pass">Password (8 characters minimum):</label>
-    <input type="password" id="password" name="password"
+    <input type="password" id="pass" name="password"
            minlength="8" required>
-           
-    <label for="address">Email Address:</label>
-    <input type="text" id="address" name="address">
+
 	<input type="submit" value="Create">
 </form>
 </div>	
