added deposit and withdraw

--- a/dashboard.html
+++ b/dashboard.html
@@ -22,16 +22,15 @@
     <button name = "transfer" type ="submit">transfer</button>
     -->
 
-
     <form action="/balance" method="POST">
         <input type="submit" name = "balance" value="Balance" />
     </form>
 
-    <form action="/deposit" method="POST">
+    <form action="/depositRedirect" method="POST">
         <input type="submit" name = "deposit" value="Deposit" />
     </form>
 
-    <form action="/withdraw" method="POST">
+    <form action="/withdrawRedirect" method="POST">
         <input type="submit" name = "withdraw" value="Withdraw" />
     </form>
 
@@ -43,8 +42,6 @@
         <input type="submit" name ="logout" value="logout"/>
     </form>
     <br>
-
-    <h1>Your balance</h1>
 
     <br>
     
