added transfer and withdraw
withdraw check amount is not more than amount in account

--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
         <input type="submit" name = "withdraw" value="Withdraw" />
     </form>
 
-    <form action="/transfer" method="POST">
+    <form action="/transferRedirect" method="POST">
         <input type="submit" name = "transfer" value="Transfer" />
     </form>
     
