--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
     <button name = "transfer" type ="submit">transfer</button>
     -->
 
-    <form action="/balance" method="POST">
+    <form action="/balanceRedirect" method="POST">
         <input type="submit" name = "balance" value="Balance" />
     </form>
 
@@ -34,7 +34,15 @@
         <input type="submit" name = "withdraw" value="Withdraw" />
     </form>
 
-    <form action="/transfer" method="POST">
+    <form action="/createAccountRedirect" method="POST">
+        <input type="submit" name = "createAccount" value="Create Account" />
+    </form>
+
+    <form action="/deleteAccountRedirect" method="POST">
+        <input type="submit" name = "deleteAccount" value="Delete Account" />
+    </form>
+
+    <form action="/transferRedirect" method="POST">
         <input type="submit" name = "transfer" value="Transfer" />
     </form>
     
