--- a/withdraw.html
+++ b/withdraw.html
@@ -8,6 +8,11 @@
 <body>
     <h1>How much would you like to Withdraw?</h1>
     <form action="/withdraw" method="POST">
+        <select id="accountNum" name="accountNum">
+            <option value="1">Account 1</option>
+            <option value="2">Account 2</option>
+            <option value="3">Account 3</option>
+        </select>
         <label for="withdraw">Withdraw Amount:</label>
         <input type="number" id="withdraw" name = "withdraw">
         <input type="submit" value="withdraw">
