--- a/deleteAccount.html
+++ b/deleteAccount.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Withdraw</title>
+    <title>Delete Account</title>
 </head>
 <body>
-    <h1>How much would you like to Withdraw?</h1>
-    <form action="/withdraw" method="POST">
+    <h1>Which account do you want to delete?</h1>
+    <form action="/deleteAccount" method="POST">
+        <label for="accountNum">Choose an account:</label>
         <select id="accountNum" name="accountNum">
             <option value="1">Account 1</option>
             <option value="2">Account 2</option>
             <option value="3">Account 3</option>
         </select>
-        <label for="withdraw">Withdraw Amount:</label>
-        <input type="number" id="withdraw" name = "withdraw" data-type="currency" placeholder="$0.00">
-        <input type="submit" value="withdraw">
+        <input type="submit">
     </form>
 </body>
 </html>
